--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,58 @@
 @import "tailwindcss";
 
+
+
+@font-face {
+  font-family: 'HalyardDisplay';
+  src: url('/fonts/Halyard_Display_Regular.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'HalyardDisplay';
+  src: url('/fonts/Halyard_Display_Bold.otf') format('opentype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'HalyardDisplay';
+  src: url('/fonts/Halyard_Display_Medium.otf') format('opentype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'HalyardDisplay';
+  src: url('/fonts/Halyard_Display_Light.otf') format('opentype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'HalyardDisplay';
+  src: url('/fonts/Halyard_Display_ExtraLight.otf') format('opentype');
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'HalyardDisplay';
+  src: url('/fonts/Halyard_Display_SemiBold.otf') format('opentype');
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'HalyardDisplay';
+  src: url('/fonts/Halyard_Display_Book.otf') format('opentype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
