login working! also updated model and code

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,14 @@
 @import "tailwindcss";
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: background-color 5000s ease-in-out 0s;
+  -webkit-box-shadow: 0 0 0px 1000px #ffffff inset;
+  -webkit-text-fill-color: #000000;
+}
+
 /* Add any custom styles here if needed */
 
 :root {
