--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,7 @@
 @font-face {
   font-family: 'HalyardDisplay';
   src: url('/fonts/Halyard_Display_Regular.otf') format('opentype');
-  font-weight: normal;
+  font-weight: 400;
   font-style: normal;
 }
 
@@ -126,12 +126,16 @@ a {
 }
 a:hover {
   color: #535bf2;
+  text-decoration: underline;
 }
+
+
 
 body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  font-family: 'HalyardDisplay', sans-serif;
 }
 
 /* Remove default button styles to avoid conflicts with Tailwind */
